# rxusb-android

./: .gitignore  README.md  build.gradle  settings.gradle
example/: build.gradle
example/src/androidTest/java/net/eraga/android/usb/example/: ExampleInstrumentedTest.java
example/src/main/: AndroidManifest.xml
example/src/main/java/net/eraga/android/usb/example/: LibUsbDevicesActivity.kt  RxUsbDevicesActivity.kt
example/src/main/res/layout/: activity_lib_usb_devices.xml  activity_main.xml
example/src/test/java/net/eraga/android/usb/example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libusb-android/: build.gradle
libusb-android/src/androidTest/java/net/eraga/rxusb/: ExampleInstrumentedTest.java
libusb-android/src/main/: AndroidManifest.xml
libusb-android/src/main/res/values/: strings.xml
usb4java-android/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake
usb4java-android/src/main/: AndroidManifest.xml
usb4java-android/src/main/java/org/usb4java/: HotplugCallback.java  Loader.java
usb4java-android/src/main/res/values/: strings.xml
usb4java-android/src/test/java/net/eraga/android/usb4java/: ExampleUnitTest.java
